--- a/Bomberman/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman/Bomberman.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ConsoleApplication.cs" />
     <Compile Include="ConsoleOperation.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomItems.cs" />
