--- a/Bomberman/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman/Bomberman.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ruch.cs" />
+    <Compile Include="InteractionUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
