--- a/Bomberman/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman/Bomberman.csproj
@@ -47,12 +47,12 @@
     <Compile Include="Bomberman.cs" />
     <Compile Include="ConsoleApplication.cs" />
     <Compile Include="ConsoleOperation.cs" />
+    <Compile Include="InteractionUser.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomItems.cs" />
-    <Compile Include="Ruch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
