--- a/Bomberman/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman/Bomberman.csproj
@@ -45,16 +45,15 @@
   <ItemGroup>
     <Compile Include="Bomba.cs" />
     <Compile Include="Bomberman.cs" />
-    <Compile Include="CheckGame.cs" />
     <Compile Include="ConsoleApplication.cs" />
     <Compile Include="ConsoleOperation.cs" />
+    <Compile Include="Detonator.cs" />
     <Compile Include="InteractionUser.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Przeszkody.cs" />
-    <Compile Include="RandomItems.cs" />
+    <Compile Include="Przeszkoda.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
